--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <div class="row">
 
-        <div class="col-lg-4 col-md-6">
+        <div class="pad col-lg-4 col-md-6 col-sm-12">
           <div class="card">
             <div class="card-header">
               <h3>Chihuahua</h3>
@@ -135,7 +135,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6">
+        <div class="pad col-lg-4 col-md-6 col-sm-12">
           <div class="card">
             <div class="card-header">
               <h3>Labrador</h3>
@@ -151,7 +151,7 @@
         </div>
 
 
-      <div class="col-lg-4 col-md-6">
+      <div class="pad col-lg-4 col-md-6 col-sm-12">
       <div class="card">
         <div class="card-header">
           <h3>Mastiff</h3>
