--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
   <!-- Footer -->
 
   <footer id="footer">
-  <a class="" href="https://Google.com"><i class="ficon fab fa-twitter fa-4x"></i></a>
-  <a class="" href="https://Google.com"><i class="ficon fab fa-facebook fa-4x"></i></a>
-  <a class="" href="https://Google.com"><i class="ficon fab fa-instagram-square fa-4x"></i></a>
+  <a class="" href="https://twitter.com"><i class="ficon fab fa-twitter fa-4x"></i></a>
+  <a class="" href="https://facebook.com"><i class="ficon fab fa-facebook fa-4x"></i></a>
+  <a class="" href="https://instagram.com"><i class="ficon fab fa-instagram-square fa-4x"></i></a>
 
 
     <p>© Copyright 2018 TinDog</p>
