--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
   <footer id="footer">
   <a class="" href="https://twitter.com"><i class="ficon fab fa-twitter fa-4x"></i></a>
-  <a class="" href="https://facebook.com"><i class="ficon fab fa-facebook fa-4x"></i></a>
+  <a class="" href="https://www.facebook.com/kandhukuri.vinodreddy"><i class="ficon fab fa-facebook fa-4x"></i></a>
   <a class="" href="https://instagram.com"><i class="ficon fab fa-instagram-square fa-4x"></i></a>
 
 
